name:                simulien
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tsenart/simulien#readme
license:             BSD3
license-file:        LICENSE
author:              Tomás Senart
maintainer:          tsenart@gmail.com
copyright:           Copyright (c) 2018 Tomás Senart
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simulien
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       text,
                       containers,
                       random,
                       random-shuffle
  default-extensions:
    OverloadedStrings
  ghc-options:
    -O2
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
